--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+input,
+button,
+select {
+  outline: none;
+}
